--- a/scritturaTesi/esempioTesi.tex
+++ b/scritturaTesi/esempioTesi.tex
@@ -23,8 +23,9 @@
 \usepackage{bbm}
 
 
-\usepackage{algorithm}	%pacchetti utilizzati per la scrittura di pseudo-codice
-\usepackage{algorithmic}
+\usepackage{algorithm, float}	%pacchetti utilizzati per la scrittura di pseudo-codice
+\usepackage{algpseudocode}
+
 
 \usepackage{caption}	%pacchetto per aggiungere le caption alle minipage
 \DeclareCaptionType[within=section]{mat}
@@ -33,6 +34,7 @@
 
 \begin{document}
 % ----- Pagine di fronespizio, numerate in romano (i,ii,iii,iv...) (obbligatorio)
+
 \frontmatter
 \generaFrontespizio
 \generaDedica
