added spy in simulation and modified chapter 3

--- a/scritturaTesi/capitolo_2.tex
+++ b/scritturaTesi/capitolo_2.tex
@@ -125,7 +125,7 @@ V_{Y_0} &= T V_{mod} + 1 + \xi
 \end{split}
 \end{equation}
 Detto questo possiamo normalizzare $\textbf{X}_0$ e $\textbf{Y}_0$ in questo modo:
-\begin{equation}
+\begin{equation}\label{eq:normalizzazione}
 \begin{split}
 \textbf{X} &= \frac{\textbf{X}_0}{\sqrt{V_{mod}}}\\
 \textbf{Y} &= \frac{\textbf{Y}_0}{\sqrt{T V_{mod} + 1 + \xi}}
